# postgrid-python

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
postgrid/: __init__.py
scripts/: lint
scripts/utils/: upload-artifact.sh
src/postgrid/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
src/postgrid/_utils/: _logs.py  _resources_proxy.py
src/postgrid/resources/: __init__.py  address_verification.py  bank_accounts.py  contacts.py  intl_address_verification.py  letters.py  postcards.py  templates.py
src/postgrid/types/: __init__.py  address_verification_verify_params.py  address_verification_verify_response.py  bank_account.py  (+27 more)
tests/: conftest.py  test_av.py  test_cheque.py  test_client.py  test_contact.py  test_deepcopy.py  test_events.py  test_extract_files.py  test_files.py  test_letter.py  test_models.py  test_postcard.py  test_qs.py  test_required_args.py  test_response.py  test_return_envelopes.py  test_streaming.py  test_template.py  test_transform.py  test_util.py  test_webhook.py  utils.py
tests/api_resources/: test_address_verification.py  test_bank_accounts.py  test_cheques.py  test_contacts.py  test_intl_address_verification.py  test_letters.py  test_postcards.py  test_templates.py
tests/test_utils/: test_datetime_parse.py  test_proxy.py  test_typing.py
(+163 files in other folders)
